# pico_p1

./: .embed.toml  .env  .gdbinit  Cargo.toml  build.rs  key.pub  memory.x  memory.x.in  release.sh  sample.txt  wrapper.sh
.cargo/: config.toml
bootloader/: Cargo.toml  build.rs
bootloader/src/: main.rs
src/: main.rs
