[package]
name = "rp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = [
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"nightly",
	"integrated-timers",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
	"unstable-traits",
	"nightly",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
	"unstable-traits",
	"defmt-timestamp-uptime",
	"nightly",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", features = [
	"tcp",
	"dhcpv4",
	"nightly",
	"medium-ethernet",
	"defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
] }
cyw43 = { git = "https://github.com/embassy-rs/embassy", features = ["defmt"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", features = [
	"defmt",
] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
log = "0.4.17"
static_cell = { version = "1.1.0", features = ["nightly"] }
heapless = { version = "0.7.16", features = ["defmt"] }
embedded-io = { version = "0.4.0", features = ["async", "defmt"] }
crc16 = "0.4.0"
dsmr5 = "0.2.2"

[build-dependencies]
dotenvy = "0.15.7"

[profile.release]
debug = true
