[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp = { version = "0.1", features = ["nightly"] }
embassy-boot-rp = { version = "0.1" }
embassy-sync = { version = "0.2" }
embassy-time = { version = "0.1", features = ["nightly"] }

cortex-m = { version = "0.7", features = [
	"inline-asm",
	"critical-section-single-core",
] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.0"

[features]
defmt = ["dep:defmt", "embassy-boot-rp/defmt", "embassy-rp/defmt"]
debug = ["defmt-rtt", "defmt"]
